--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ repositories {
 }
 
 dependencies {
-    compile 'io.vertx:vertx-core:' + vertxVersion
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
     antlr "org.antlr:antlr4:4.5.1"
     testCompile 'junit:junit:4.12'
 }
