--- a/build.gradle
+++ b/build.gradle
@@ -6,19 +6,14 @@ plugins {
     id 'application'
 }
 
-def vertxVersion = '3.0.0'
+def vertxVersion = '3.2.0'
 version = '1.0.0'
 
 sourceCompatibility = 1.8 
 targetCompatibility = 1.8
 
 if (!JavaVersion.current().java8Compatible) {
-	throw new IllegalStateException(
-            '''A Haiku:
-            |   This needs Java 8,
-            |   You are using something else,
-            |   Refresh. Try again.
-            '''.stripMargin())
+    throw new IllegalStateException("This needs Java 8. You are using ${JavaVersion.current()}.")
 }
 
 publishing {
@@ -44,7 +39,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.squareup.okhttp:okhttp:2.7.0'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile fileTree(dir: 'lib', include: '*.jar')
     testCompile 'junit:junit:4.12'
@@ -58,7 +53,7 @@ shadowJar {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.6'
+    gradleVersion = '2.9'
 }
 
 mainClassName = 'xyz.bpdp.jifa.Jifa'
